--- a/views/login.hbs
+++ b/views/login.hbs
@@ -1,3 +1,4 @@
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 <h2>Welcome to iTrain</h2>
 
 <h3>Please login into your iTrain account</h3>
