Adding comments, data validation to forms, and other cosmetic updates

--- a/views/login.hbs
+++ b/views/login.hbs
@@ -9,7 +9,7 @@
 
         <h2>Welcome!</h2>
 
-        <h3>Please login into your BMI account</h3>
+        <h3>Please login into your BMI Census account</h3>
 
 
     </div>
@@ -28,6 +28,6 @@
         <input type="submit" class="btn btn-success" value="Log In">
     </form>
 
-<p>New to iTrain? you can <a href="/signup">sign up here!</a></p>
+<p>New here? You can <a href="/signup">sign up here!</a></p>
 
 </div>
