--- a/views/signup.hbs
+++ b/views/signup.hbs
@@ -10,7 +10,7 @@
 
         <h2>Welcome!</h2>
 
-        <h2>Create an BMI account</h2>
+        <h2>Create a BMI Census account</h2>
 
 
     </div>
@@ -30,6 +30,6 @@
       <input type="submit" class="btn btn-success" value="Sign Up"/>
     </form>
 
-    <p>Already have a BMI account? <a href="/">Log in here!</a></p>
+    <p>Already have a BMI Census account? <a href="/">Log in here!</a></p>
 
 </div>
